--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
 
     /* Font Weight */
     --fw-normal: 400;
+    --fw-medium: 500;
     --fw-semibold: 600;
     --fw-bold: 700;
 
@@ -160,4 +161,71 @@ Brand Section
 
 #brand svg {
     fill: linear-gradient(135deg, rgba(192, 204, 218, 0.10) 0%, rgba(192, 204, 218, 0.60) 50.38%, rgba(192, 204, 218, 0.10) 100%);
+}
+
+/* ==================
+Collection Section
+===================== */
+#collection {
+    padding: 100px 0;
+}
+
+.section-title {
+    font-size: 1.75rem;
+    line-height: 4.375rem;
+    text-align: center;
+}
+
+.collection-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    padding: 30px 0 70px;
+}
+
+.collection-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+
+.collection-item h3 {
+    color: #18191F;
+    font-size: 1.75rem;
+    font-weight: var(--fw-medium);
+    line-height: 40px;
+    margin: 16px 0 6px;
+}
+
+.collection-item p.price {
+    font-family: var(--ff-inter);
+    font-size: 1.5rem;
+    line-height: 1.5em;
+}
+
+.rating {
+    display: flex;
+}
+
+.rating img {
+    width: 12px;
+}
+
+.rating p {
+    font-size: 14px;
+    font-weight: var(--fw-bold);
+    letter-spacing: 0.1px;
+    margin-left: 8px;
+    line-height: 1.375rem;
+}
+
+.container-item p {
+    font-family: var(--ff-inter);
+    font-size: 14px;
+    font-weight: var(--fw-bold);
+    line-height: 1.25rem;
+    color: #787885;
 }
