--- a/css/style.css
+++ b/css/style.css
@@ -52,21 +52,36 @@ li {
     margin: 0 auto;
 }
 
-.primary-btn {
-    color: white;
+.btn {
     font-size: 1rem;
     line-height: 1.5rem;
     font-weight: var(--fw-bold);
-    padding: 10px 24px;
-    border-radius: 40px;
-    background-color: var(--primary-color);
     position: relative;
+    padding: 10px 24px;
 }
 
-.primary-btn::after {
+.primary-btn {
+    color: white;
+    border-radius: 40px;
+    background-color: var(--primary-color);
+}
+
+.primary-btn.btn::after {
     content: url('../assets/images/icons/arrow-forward.svg');
     position: absolute;
     left: 145px;
+}
+
+.secodary-btn {
+    text-align: right;
+    color: var(--primary-color);
+}
+
+.secodary-btn.btn::after {
+    content: url('../assets/images/icons/arrow-forward-2.svg');
+    position: absolute;
+    right: 0;
+    top: 13px;
 }
 
 /* ================
@@ -180,7 +195,7 @@ Collection Section
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
-    padding: 30px 0 70px;
+    padding: 30px 0 50px;
 }
 
 .collection-item {
@@ -228,4 +243,9 @@ Collection Section
     font-weight: var(--fw-bold);
     line-height: 1.25rem;
     color: #787885;
+}
+
+#collection a {
+    text-align: right;
+    display: block;
 }
